--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Bot-WA",
-    "version": "1.0.0",
-    "description": "whatsApp bot",
+    "name": "botwa",
+    "version": "8.0.3",
+    "description": "Lightweight WhatsApp Bot",
     "depecrated": false,
     "main": "index.js",
     "directories": {
@@ -23,26 +23,26 @@
         "Games-wabot",
         "wabot-aq",
         "whiskeysockets",
-        "febrywesker",
+        "hitam",
         "baileys"
     ],
-    "homepage": "https://github.com/PteroxOS/bot-wa",
+    "homepage": "https://github.com",
     "author": {
-        "name": "Trio Hitam"
+        "name": "hitam"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/PteroxOS/bot-wa"
+        "url": "git+https://github.com"
     },
     "bugs": {
-        "url": "https://github.com/PteroxOS/bot-wa"
+        "url": "https://github.com"
     },
     "license": "MIT",
     "dependencies": {
-        "@adiwajshing/baileys": "npm:baileys@7.0.0-rc.9",
+        "@adiwajshing/baileys": "npm:baileys",
         "@adiwajshing/keyed-db": "^0.2.4",
         "@vitalets/google-translate-api": "^9.0.0",
-        "archiver": "^7.0.1",
+        "javascript-obfuscator": "^4.0.2",
         "async": "^3.2.4",
         "awesome-phonenumber": "^2.64.0",
         "axios": "^0.27.2",
@@ -51,22 +51,21 @@
         "cheerio": "^1.0.0-rc.12",
         "colors": "1.4.0",
         "crypto": "^1.0.1",
-        "didyoumean": "^1.2.2",
         "express": "^4.18.2",
+        "didyoumean": "^1.2.2",
         "file-type": "^16.5.3",
         "form-data": "^4.0.0",
         "human-readable": "^0.2.1",
-        "javascript-obfuscator": "^4.0.2",
-        "jimp": "^0.16.13",
         "jsdom": "^20.0.0",
-        "link-preview-js": "^3.0.4",
+        "jimp": "0.16.13",
         "lodash": "^4.17.21",
         "lowdb": "^2.1.0",
+        "lru-cache": "^11.2.4",
+        "link-preview-js": "^3.0.4",
         "moment-timezone": "^0.5.37",
         "mongoose": "^6.0.14",
-        "node-cache": "^5.1.2",
-        "node-cron": "^3.0.3",
         "node-fetch": "^2.6.9",
+        "node-cache": "^5.1.2",
         "node-gtts": "2.0.2",
         "node-os-utils": "^1.3.7",
         "node-webpmux": "^3.1.3",
@@ -74,25 +73,24 @@
         "ocr-space-api-wrapper": "^2.3.2",
         "os": "^0.1.2",
         "perf_hooks": "^0.0.1",
-        "pino": "^8.0.0",
         "qrcode": "^1.5.0",
         "qrcode-terminal": "^0.12.0",
         "readline": "^1.3.0",
-        "sharp": "^0.32.6",
         "similarity": "^1.2.1",
+        "sharp": "^0.32.6",
         "socket.io": "^4.5.1",
         "syntax-error": "^1.4.0",
-        "terminal-image": "^2.0.0",
         "tiktokdl": "^0.0.5",
+        "terminal-image": "^2.0.0",
         "url": "^0.11.0",
         "url-regex": "^5.0.0",
         "url-regex-safe": "^2.1.0",
         "util": "^0.12.4",
-        "wa-sticker-formatter": "^4.4.4",
+        "wa-sticker-formatter": "^4.3.2",
         "yargs": "^17.5.1",
         "yt-search": "^2.10.3"
     },
     "overrides": {
-        "jimp": "^0.16.13"
+        "jimp": "0.16.13"
     }
 }
